--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h1>Welcome to My Simple Image Page</h1>
 
     <!-- Display the image -->
-    <img src="your-image.jpg" alt="A simple display of an image">
+    <img src="oak.jpg" alt="A simple display of an image">
 
     <p>This is an image displayed on the page.</p>
 </body>
