--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to My Simple Image Page</h1>
+    <h1>Coming Soon</h1>
 
     <!-- Display the image -->
     <img src="oak.jpg" alt="A simple display of an image">
 
-    <p>This is an image displayed on the page.</p>
 </body>
 </html>
