--- a/website/index.html
+++ b/website/index.html
@@ -20,7 +20,7 @@
     <h1>Coming Soon</h1>
 
     <!-- Display the image -->
-    <img src="oak.jpg" alt="A simple display of an image">
+    <img src="logo.jpg" alt="A simple display of an image">
 
 </body>
 </html>
